reset db username and password

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
-DATABASE_URL = mongodb+srv://shanuraj715:sweetshanu715@myalbum.iqhru.mongodb.net/myalbum?retryWrites=true&w=majority
+DB_USERNAME = username
+DB_PASSWORD = password
 MAX_FILE_SIZE = 15728640
